# synthoseis-pre-train

./: .gitignore  LICENSE  README.md  calculate_batch_size.py  generate_datasets.sh  inference.py  my_commands.txt  pyproject.toml  run_smoke_test.sh  train.py  train_multi_datasets.sh
.agentic-docs/: 2026-05-02_pre-train-pipeline-build-out.md  2026-05-04_mixed-batch-planning-and-data-fixes.md  2026-05-04_optimizer-logging-and-overnight-mode.md  2026-05-04_thermal-guard-and-ops-hardening.md  2026-05-05_epoch-boundary-dataset-mgmt.md  2026-05-07_ssim-mse-loss_session-summary.md  2026-05-10_unet-decoder-and-training-compat-fixes.md  2026-05-17_loss-loop-polarity-and-study-alignment.md  2026-05-17_sliding-stats-loss-and-agentic-workflow.md  2026-05-18_model-summary-safe-and-full-debug-mode.md  2026-05-20_session-summary_input-histeq-backport.md  branch_and_commit_instructions.txt  session_summary_2026-05-10.md
.github/: agentic-session-workflow.md  copilot-instructions.md
copilot/: copilot-instructions.md  implement-high-temperature-pausing.md
diagnostics/: diagnostic_plot_cluster_masking_methods.py
plans/: 2026-05-04_mixed-batch-concat-dataset.md  2026-05-07_ssim-mse-loss-implementation-plan.md  2026-5-10_unet_decoder_upgrades.md  2026-5-10_unet_decoder_upgrades_revised.md
tests/: test_augmentation_geometry.py  test_augmentation_pair.py  test_composite_cluster_aware_loss_density.py  test_composite_cluster_aware_loss_redesign.py  test_composite_cluster_aware_loss_voxel_level.py  test_dataloader_non_cubic_shape.py  test_decoder_upsample.py  test_gpu_resources.py  (+12 more)
(+11 files in other folders)
