[build-system]
requires = ["uv_build>=0.11.8"]
build-backend = "uv_build"

[project]
name = "synthoseis-pre-train"
version = "0.1.0"
description = "Seismic 3D Mamba pre-training repository for masked seismic reconstruction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "zarr>=2.12.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
